force-app/main/default/objects/Match__c/fields/Match_Desc__c.field-meta.xml
<CustomField>
    <fullName>Match_Desc__c</fullName>
    <label>Match Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>