force-app/main/default/objects/Match__c/fields/Match_Format__c.field-meta.xml
<CustomField>
    <fullName>Match_Format__c</fullName>
    <label>Match Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>