force-app/main/default/objects/Match__c/fields/MatchId__c.field-meta.xml
<CustomField>
    <fullName>MatchId__c</fullName>
    <label>MatchId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>