force-app/main/default/objects/Match__c/fields/Series_Id__c.field-meta.xml
<CustomField>
    <fullName>Series_Id__c</fullName>
    <label>Series Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>