force-app/main/default/objects/Match__c/fields/Series_Name__c.field-meta.xml
<CustomField>
    <fullName>Series_Name__c</fullName>
    <label>Series Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>